Stop text2qr overflowing past window dimensions

--- a/src/static/css/qrcode.css
+++ b/src/static/css/qrcode.css
@@ -3,6 +3,11 @@ div.container {
     flex-direction: column;
 }
 
+#qr-canvas img {
+    max-height: 100vh;
+    max-width: 100vw;
+}
+
 div#qr-canvas {
     text-align: center;
 }
